tests/testcases/errors/BCE0051-1.boo
"""
BCE0051-1.boo(4,11): BCE0051: Operator '^' cannot be used with a left hand side of type 'System.Double' and a right hand side of type 'System.Double'.
"""
print 3.0 ^ 1.1
